<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SupportedDevices" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/tell_developer"
        android:onClick="startSendDevice" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/note_device"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/TitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/confirmed_working"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/devicetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/modeltextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/get_device"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/producttextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/get_product"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/modeltextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/producttextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/get_model"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/companytextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/devicetextView"
        android:layout_alignLeft="@+id/devicetextView"
        android:text="@string/get_company"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/brandtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/companytextView"
        android:layout_alignLeft="@+id/companytextView"
        android:text="@string/get_brand"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/brandtextView"
        android:layout_alignLeft="@+id/brandtextView"
        android:text="@string/current_device"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>